--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Timeline</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
         </ul>
       </div>
@@ -72,25 +73,96 @@
     <div class="row text-center">
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+          <p></p>
           <h3 class="h2 ww-title">Shekhar</h3>
-          <p class="pt-3 text-left text-muted">Korem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
         </div>
       </div>
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+          <p></p>
           <h3 class="h2 ww-title">Shilu</h3>
-          <p class="pt-3 text-left text-muted">Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="ww-section bg-light" id="events">
+
+<div class="ww-section bg-light" id="timeline">
+  <div class="container">
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Timeline</h2>
+    
+    <div class="timeline">
+      <div class="container-tl left">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>5 Dec 1993 &#128102;&#127995;</h2>
+          <p>Our Hero born.</p>
+        </div>
+      </div>
+      <div class="container-tl right">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>21 Nov 1998 &#128103;&#127995;</h2>
+          <p>Here comes the Lady.</p>
+        </div>
+      </div>
+      <div class="container-tl left">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>2016 👨🏻‍🎓</h2>
+          <p>He graduated and started earning money for the bride's makeup expenses &#x1F602;.</p>
+        </div>
+      </div>
+      <div class="container-tl right">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>2019 👩🏻‍🎓</h2>
+          <p>She graduated and decided to study more, to be exact Master of Science in Chemistry. &#128564;Boring...</p>
+        </div>
+      </div>
+      <div class="container-tl left">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>27 Nov 2020 &#129309;&#127995;</h2>
+          <p>Their Family decided that our Hero&#128378;&#127995; and Heroine&#128131;&#127995; are now old enough and should get married.</p>
+        </div>
+      </div>
+      <div class="container-tl right">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>29 March 2021 &#128525; </h2>
+          <p>Both saw each other for the First time.</p>
+        </div>
+      </div>
+      <div class="container-tl left">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>27 May 2021 &#128241;</h2>
+          <p>Started endless phone calls &#128222; and messages &#128221;.</p>
+        </div>
+      </div>
+      <div class="container-tl right">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>27 June 2021 &#128545;&#128545;</h2>
+          <p>They experience the most important part of relationship.</p> <p>Yes you guessed it right, They fought &#128548; for the first time.</p>
+        </div>
+      </div>
+      <div class="container-tl left">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>2021-2022 &#128512;&#128514;&#128521;&#128527;&#128544;&#128545;&#128536;&#128522;&#128525;</h2>
+          <p>Lots of calls, messages and fight for more than year</p>
+        </div>
+      </div>
+      <div class="container-tl right">
+        <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
+          <h2>25 Nov 2022 🥳🎉🥳🎉</h2>
+          <p>Our King&#129332;&#127995; and Queen&#128120;&#127995; are getting Married.</p>
+          <p>It gives us great joy to cordially invite you to the big day. Your presence in the ceremony will mean everything to us.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ww-section" id="events">
   <div class="container ww-wedding-event">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Events</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
-        <div class="my-3">
+        <div class="my-3" data-aos="fade-down-left" data-aos-duration="1000">
           <div class="h4">Wedding Party</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Maharani Marriage Mahal, Hathua, Siwan, Bihar</span></li>
@@ -109,7 +181,7 @@
     </div>
     <div class="row">
       <div class="col-md-7 col-sm-12">
-        <div class="my-3">
+        <div class="my-3" data-aos="fade-down-left" data-aos-duration="1000">
           <div class="h4">Reception</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Community Center, Manas Nagar, Mughalsarai, UP</span></li>
