--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
 </div>
 
-<div class="ww-section bg-light" id="timeline">
+<div class="ww-section" id="timeline">
   <div class="container">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Timeline</h2>
     
