changed photo and font color

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   <div class="ww-wedding-announcement justify-content-middle">
     <div class="container ww-announcement-container">
       <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10"></p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">Shekhar & Shilu</p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">Getting Married</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Shekhar & Shilu</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Getting Married</p>
       <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000"><img src="images/laurel-1.png" alt="Heart" width="300" height="300"/></p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">Save the Date</p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">25<sup>th</sup> November, 2022</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Save the Date</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">25<sup>th</sup> November, 2022</p>
     </div>
   </div>
 </div>
@@ -54,7 +54,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container"><a href="#"><svg class="heart" viewBox="0 0 32 29.6"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
 </svg></a>
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Shekhar Weds Shilu</a></h1>
+      <h1 class="h2"><a class="pl-4 navbar-brand" href="#" style="color:#7d5656">Shekhar Weds Shilu</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -69,18 +69,18 @@
 </div>
 <div class="ww-section" id="couple">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000" style="color:#7d5656">Groom & Bride</h2>
     <div class="row text-center">
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
           <p></p>
-          <h3 class="h2 ww-title">Shekhar</h3>
+          <h3 class="h2 ww-title" style="color:#7d5656">Shekhar</h3>
         </div>
       </div>
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
           <p></p>
-          <h3 class="h2 ww-title">Shilu</h3>
+          <h3 class="h2 ww-title" style="color:#7d5656">Shilu</h3>
         </div>
       </div>
     </div>
@@ -89,66 +89,66 @@
 
 <div class="ww-section" id="timeline">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Timeline</h2>
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000"  style="color:#7d5656"">Timeline</h2>
     
     <div class="timeline">
       <div class="container-tl left">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>5 Dec 1993 &#128102;&#127995;</h2>
+          <h2 style="color:#7d5656">5 Dec 1993 &#128102;&#127995;</h2>
           <p>Our Hero born.</p>
         </div>
       </div>
       <div class="container-tl right">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>21 Nov 1998 &#128103;&#127995;</h2>
+          <h2 style="color:#7d5656">21 Nov 1998 &#128103;&#127995;</h2>
           <p>Here comes the Lady.</p>
         </div>
       </div>
       <div class="container-tl left">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>2016 👨🏻‍🎓</h2>
+          <h2 style="color:#7d5656">2016 👨🏻‍🎓</h2>
           <p>He graduated and started earning money for the bride's makeup expenses &#x1F602;.</p>
         </div>
       </div>
       <div class="container-tl right">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>2019 👩🏻‍🎓</h2>
+          <h2 style="color:#7d5656">2019 👩🏻‍🎓</h2>
           <p>She graduated and decided to study more, to be exact Master of Science in Chemistry. &#128564;Boring...</p>
         </div>
       </div>
       <div class="container-tl left">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>27 Nov 2020 &#129309;&#127995;</h2>
+          <h2 style="color:#7d5656">27 Nov 2020 &#129309;&#127995;</h2>
           <p>Their Family decided that our Hero&#128378;&#127995; and Heroine&#128131;&#127995; are now old enough and should get married.</p>
         </div>
       </div>
       <div class="container-tl right">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>29 March 2021 &#128525; </h2>
+          <h2 style="color:#7d5656">29 March 2021 &#128525; </h2>
           <p>Both saw each other for the First time.</p>
         </div>
       </div>
       <div class="container-tl left">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>27 May 2021 &#128241;</h2>
+          <h2 style="color:#7d5656">27 May 2021 &#128241;</h2>
           <p>Started endless phone calls &#128222; and messages &#128221;.</p>
         </div>
       </div>
       <div class="container-tl right">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>27 June 2021 &#128545;&#128545;</h2>
+          <h2 style="color:#7d5656">27 June 2021 &#128545;&#128545;</h2>
           <p>They experience the most important part of relationship.</p> <p>Yes you guessed it right, They fought &#128548; for the first time.</p>
         </div>
       </div>
       <div class="container-tl left">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>2021-2022 &#128512;&#128514;&#128521;&#128527;&#128544;&#128545;&#128536;&#128522;&#128525;</h2>
+          <h2 style="color:#7d5656">2021-2022 &#128512;&#128514;&#128521;&#128527;&#128544;&#128545;&#128536;&#128522;&#128525;</h2>
           <p>Lots of calls, messages and fight for more than year</p>
         </div>
       </div>
       <div class="container-tl right">
         <div class="content" data-aos="zoom-in-down" data-aos-duration="1000">
-          <h2>25 Nov 2022 🥳🎉🥳🎉</h2>
+          <h2 style="color:#7d5656">25 Nov 2022 🥳🎉🥳🎉</h2>
           <p>Our King&#129332;&#127995; and Queen&#128120;&#127995; are getting Married.</p>
           <p>It gives us great joy to cordially invite you to the big day. Your presence in the ceremony will mean everything to us.</p>
         </div>
@@ -159,11 +159,11 @@
 
 <div class="ww-section" id="events">
   <div class="container ww-wedding-event">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Events</h2>
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000" style="color:#7d5656">Wedding Events</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3" data-aos="fade-down-left" data-aos-duration="1000">
-          <div class="h4">Wedding Party</div>
+          <div class="h4" style="color:#7d5656">Wedding Party</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Maharani Marriage Mahal, Hathua, Siwan, Bihar</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">25 Nov 2022, 6PM</span></li>
@@ -182,7 +182,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3" data-aos="fade-down-left" data-aos-duration="1000">
-          <div class="h4">Reception</div>
+          <div class="h4" style="color:#7d5656">Reception</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Community Center, Manas Nagar, Mughalsarai, UP</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">3 Dec 2022, 6PM</span></li>
