changed photo and font color reverted

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   <div class="ww-wedding-announcement justify-content-middle">
     <div class="container ww-announcement-container">
       <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10"></p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Shekhar & Shilu</p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Getting Married</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#7d5656">Shekhar & Shilu</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#7d5656">Getting Married</p>
       <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000"><img src="images/laurel-1.png" alt="Heart" width="300" height="300"/></p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">Save the Date</p>
-      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#e7c47a">25<sup>th</sup> November, 2022</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#7d5656">Save the Date</p>
+      <p class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10" style="color:#7d5656">25<sup>th</sup> November, 2022</p>
     </div>
   </div>
 </div>
